﻿Sun Dec 12 16:19:01 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * tests/Bug_1482_Regression/Hello.cpp:
          Fixes 'maybe undefined operation' warning in MingW GCC 4.5.0.

        * tests/OBV/Simple/Client_i.cpp:
          Removed unnecessary include leading to redefinition warnings.

        * tests/POA/DSI/Database_i.cpp:
          Fixes 'uninitialized use' warnings.

Wed Dec  8 15:20:26 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/ast/ast_module.cpp:

           Cosmetic changes.

        * TAO_IDL/fe/y.tab.cpp:
        * TAO_IDL/fe/idl.yy:

          Added an exit if there is a an error produced in adding
          a template module.

Wed Dec  8 12:36:06 UTC 2010  Martin Corino  <corino_m@remedy.nl>

        * TAO_IDL/be/be_visitor_component/component_ami_rh_ex_base.cpp:
        * TAO_IDL/be/be_visitor_component/component_ami_rh_exh.cpp:
          Some more fixes for the AMI reply handler executor implementation
          generation.

Wed Dec  8 03:13:28 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/fe/fe_utils.cpp(can_be_redefined):

          Modified the method to return 'false' if either of its 2
          arguments is a template module. Such a return will
          cause a redefinition error to be output.

Tue Dec  7 22:10:52 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_codegen.cpp:

          Removed an unused variable. Thanks to Adam Mitz
          <mitza@ociweb.com> for pointing it out.

Tue Dec  7 21:49:36 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/be_include/be_codegen.h:

          Fixed a double deletion problem when OpenDDS is the DDS
          implementation and connector IDL is processed.

Tue Dec  7 20:07:32 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/include/idl_global.h:
        * TAO_IDL/ast/ast_visitor_tmpl_module_ref.cpp: